syntax="proto3";

option csharp_namespace = "HappyCoding.ProtobufSerialization.UsingGoogleProtobuf.Data";

message MyTestMessage_LessProperties {
  string firstName = 1;
  string lastName = 2;
  repeated string emails = 4;
}